WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212544
[iOS] Unable to paste images when composing mail at yahoo.com
https://bugs.webkit.org/show_bug.cgi?id=212544
Summary
[iOS] Unable to paste images when composing mail at yahoo.com
Wenson Hsieh
Reported
2020-05-29 14:01:57 PDT
<
rdar://problem/63511613
>
Attachments
Patch
(3.75 KB, patch)
2020-05-29 14:14 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Take 2
(4.48 KB, patch)
2020-05-29 15:22 PDT
,
Wenson Hsieh
megan_gardner
: review+
aestes
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-05-29 14:14:14 PDT
Comment hidden (obsolete)
Created
attachment 400614
[details]
Patch
Tim Horton
Comment 2
2020-05-29 14:32:07 PDT
Comment on
attachment 400614
[details]
Patch Way insufficient coverage of Yahoo TLDs
Wenson Hsieh
Comment 3
2020-05-29 15:22:34 PDT
Created
attachment 400625
[details]
Take 2
Andy Estes
Comment 4
2020-05-29 16:02:53 PDT
Comment on
attachment 400625
[details]
Take 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=400625&action=review
> Source/WebCore/page/Quirks.cpp:826 > + m_shouldAvoidPastingImagesAsWebContent = host.startsWith("mail.") && topPrivatelyControlledDomain(host).startsWith("yahoo.");
Since this is a hostname, do you need to use startsWithIgnoringASCIICase instead? Or does URL do some sort of lowercase canonicalization?
Andy Estes
Comment 5
2020-05-29 16:03:45 PDT
Comment on
attachment 400625
[details]
Take 2 Feel free to cq+ again if startsWithIgnoringASCIICase isn't needed.
Wenson Hsieh
Comment 6
2020-05-29 16:05:25 PDT
(In reply to Andy Estes from
comment #5
)
> Comment on
attachment 400625
[details]
> Take 2 > > Feel free to cq+ again if startsWithIgnoringASCIICase isn't needed.
Good catch — I think the host name check should use startsWithIgnoringASCIICase.
Wenson Hsieh
Comment 7
2020-05-29 16:09:53 PDT
Committed
r262323
: <
https://trac.webkit.org/changeset/262323
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug